# Qurator

./: .gitignore
.github/workflows/: ci.yml  release.yml
app/: package-lock.json  package.json  svelte.config.js  vite.config.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  write_queue.rs
app/src-tauri/src/migrations/: 0001_init.sql
app/src/routes/: +layout.ts  +page.svelte
app/src/routes/grid/: +page.svelte
