[package]
name = "qurator"
version = "0.1.0"
description = "Qurator - a local-first archivist's cataloguer"
edition = "2021"
# libsqlite3-sys 0.38's build script uses `cfg_select!`, stabilized in 1.95.
rust-version = "1.95"

[lib]
# See https://v2.tauri.app/develop/ - required so the library can also be
# used by the mobile entry point / integration tests.
name = "qurator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.5", features = [] }
tauri-plugin-updater = "2"
serde = { version = "1.0.228", features = ["derive"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde_json = "1.0.150"
